<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CKW Search</string>
    <string name="app_version">1.3.0-SNAPSHOT</string>
    <string name="app_version_about">Version</string>
    <string name="hello">Hello ckw search!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_help">Help</string>
    <string name="settingSummary">Application Preferences</string>
    <string name="synchronization_progress_bar_title">Synchronizing</string>
    <string name="error_title">Error !</string>
    <string name="country_code_download_msg">Downloading CountryCode please wait...</string>
    <string name="upload_search_logs_download_msg">Uploading Search Logs please wait...</string>
    <string name="keyword_download_msg">Downloading keywords please wait...</string>
    <string name="farmer_download_msg">Downloading farmers please wait...</string>
    <string name="synchronization_complete_msg">Synchronization Complete.</string>
    <string name="processing_keywords_msg">Processing Keywords</string>
    <string name="processing_farmers_msg">Processing Farmers</string>
    <string name="removing_keywords_msg">Removing Old Keywords</string>
    <string name="downloading_images_msg">Downloading Images</string>
    <string name="processing_images_msg">Processing Images</string>
    <string name="error_downloading_keywords">Error downloading keywords</string>
    <string name="error_processing_keywords">Error processing keywords</string>
    <string name="error_downloading_farmers">Error downloading farmers</string>
    <string name="error_processing_farmers">Error processing farmers</string>
    <string name="error_uploading_searchlogs">Error uploading search logs</string>
    <string name="error_downloading_images">Error downloading images</string>
    <string name="error_connecting_to_server">An error has occured while communicating with the server.
        Please check your connection settings.
    </string>

    <!-- Connection strings-->
    <string name="server_url">http://andesgf.force.com/consulteca/SearchGetRequest</string>
    <string name="title_server_url">Server Url</string>
    <string name="summary_server_url">The url of the server to synchronize with.</string>
    <string name="setting_connection">Connection</string>
    <string name="summary_connection">Connection Related Settings</string>
    <string name="connection_preferences">Connection</string>
    <string name="action_search">Search</string>
    <string name="action_new_search">New Search</string>
    <string name="farmer_id_text">Farmer Id</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourite_searches">Favourite Searches</string>
    <string name="synchronise">Synchronize</string>
    <string name="country_code_server_url_path">search/getCountryCode</string>
    <string name="keyword_server_url_path">search/getsearchkeywords</string>
    <string name="farmers_server_url_path">SearchGetFarmers</string>
    <string name="image_server_url_path">search/getsfimages?imageId=</string>
    <string name="search_log_url_path">search/search</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="sample_text">sample text</string>
    <string name="background_synchronization">Background Synchronization</string>
    <string name="background_synchronization_summary">Background Synchronization.
        Settings are set in reference to the current date.</string>
    <string name="background_sync_interval">30</string>
    <string name="background_sync_interval_summary">Determines how often the background synchronization will take
        place.
    </string>
    <string name="background_sync_interval_title">Background Synchronization Interval</string>
    <string name="background_sync_enabled_title">Enable Background Synchronization</string>
    <string name="background_sync_enabled_summary">Turns on/off the background synchronization</string>
    <string name="background_sync_interval_units_title">Interval Units</string>
    <string name="background_sync_interval_units_summary">Time units for the synchronization interval</string>
    <string name="background_sync_interval_unit_default">1</string>
    <string name="send_message">Send Message</string>
    <string name="share_using">Send Message With</string>
    <string name="setting_general">General</string>
    <string name="prompt_for_clientid_title">Prompt for Client Identifier</string>
    <string name="prompt_for_clientid_summary">Enable the prompting of the identifier of the person you are serving
    </string>
    <string name="setting_general_summary">General Settings</string>
    <string name="clientid_dialog_message">Search For Farmer</string>
    <string name="clientid_dialog_title">Farmer Identifier Prompt</string>
    <string name="missing_client_id">Missing Farmer Information</string>
    <string name="mark_favourite">Favourite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="test_searching_enabled_title">Enable Test Searching</string>
    <string name="test_searching_enabled_summary">Search logs will be marked as test logs</string>
    <string name="uploading_search_logs">Uploading Search Logs</string>
    <string name="ok">Ok</string>
    <string name="search_farmer">Search for Farmer Name</string>
    <string name="content_test_size">17sp</string>

</resources>