<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting_general"
                        android:summary="@string/setting_general">

        <!-- greyed out for GF Search Uganda -->
        <CheckBoxPreference android:key="prompt_for_clientid_enabled"
                            android:title="@string/prompt_for_clientid_title"
                            android:summary="@string/prompt_for_clientid_summary"
                            android:enabled="false"
                            android:defaultValue="true"/>

        <CheckBoxPreference android:key="test_searching_enabled"
                            android:title="@string/test_searching_enabled_title"
                            android:summary="@string/test_searching_enabled_summary"
                            android:defaultValue="false"/>

    </PreferenceCategory>
</PreferenceScreen>